# time_report

./: LICENSE  README.md  database.py  exceptions.py  logisk_skiss.drawio  main.py  pyproject.toml  time_report.py
input/: employees.txt  projects.txt
src/time_report/: controller.py  database.py  models.py  settings.py  utils.py
src/time_report/gui/: app.py  color_picker.py  date_selection.py  log_time_buttons.py  manual_log_time.py  move_time.py  page_day_report.py  page_log_time.py  page_project.py  page_settings.py  page_summarize.py  page_vab.py  page_week_report.py  page_week_schedule.py  page_week_submit.py  project_card.py  sum_times.py  week_selection.py
tests/: test_utils.py
